fix: visibility of search result

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 #weatherContainer {
-  /* visibility: hidden; */
+  visibility: hidden;
   background-color: rgba(0, 0, 0, 0.3);
   box-shadow: 1px 1px 4px black;
   padding: 25vh;
